<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_26sdp"
    android:layout_marginEnd="@dimen/_26sdp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activities.Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:text="@string/begin_your_journey"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edittext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawablePadding="8dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edittext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawablePadding="8dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edittext3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawablePadding="8dp"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edittext4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/register_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/discount"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                tools:ignore="UnusedAttribute" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_with"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_10sdp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_amp_conditions"
                android:textColor="#0000ff"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_5sdp"
                />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/button_2"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            tools:targetApi="m" />
    </LinearLayout>
</LinearLayout>