<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20sdp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activities.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:src="@drawable/welcome_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/welcome"
            android:textColor="#545454"
            android:textSize="@dimen/_18sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/signin_to_continue_with_your_mobile_number"
            android:textColor="#bdbdbd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.hbb20.CountryCodePicker
                android:id="@+id/cp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_4sdp"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/enter_your_mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/a_six_digit_otp_will_be_sent_via_sms_to_verify_your_mobile_number"
            android:textColor="#bdbdbd" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>

