<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.Description">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/des_toolbar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="360dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/view_pager"
                android:layout_centerHorizontal="true"
                android:padding="16dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/des_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="9"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/des_price"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/des_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/discount"
                    android:textColor="@color/discount"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="200dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/material"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/neck_type"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/sleeve"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/pattern"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/des_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/_100_pure_cotton"
                    android:textColor="@color/description"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/des_NeckType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/round_neck"
                    android:textColor="@color/description"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/des_SleeveType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/full_sleeve"
                    android:textColor="@color/description"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/des_pattern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/printed"
                    android:textColor="@color/description"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:text="@string/product_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/return_policy"
            android:textColor="@color/description"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/size"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/color"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/des_spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/border"
                    android:entries="@array/Spinner1"
                    android:padding="16dp">

                </androidx.appcompat.widget.AppCompatSpinner>


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/des_spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/border"
                    android:entries="@array/Spinner2"
                    android:padding="16dp">

                </androidx.appcompat.widget.AppCompatSpinner>


            </LinearLayout>


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/des_addtocart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buynow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button"
            android:text="@string/buy_now"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>